Fix spacing of install/channels overlay

--- a/static/sass/_snapcraft_details_heading.scss
+++ b/static/sass/_snapcraft_details_heading.scss
@@ -58,7 +58,7 @@
 
   .p-view-store-button,
   .p-cli-install {
-    margin-top: $sp-x-small;
+    margin-bottom: $input-margin-bottom;
   }
 
   .p-channel-map {
@@ -68,12 +68,12 @@
     position: absolute;
     right: 0;
     top: 0;
-    transform: translateY(57px); // just under the header (mobile)
+    transform: translateY(48px); // just under the header (mobile)
     transition: transform 500ms;
     z-index: 10;
 
-    @media screen and (min-width: $breakpoint-medium) {
-      transform: translateY(48px); // just under the header (desktop)
+    label {
+      margin-bottom: $spv-inter--condensed + $spv-nudge-compensation;
     }
 
     &.is-closed {
@@ -93,7 +93,7 @@
       }
 
       &--heading {
-        padding-bottom: $sp-small;
+        padding-bottom: 0;
         padding-top: 0;
 
         @media screen and (max-width: $breakpoint-medium) {
@@ -113,18 +113,8 @@
       padding-top: $sp-x-small;
     }
 
-    .p-tabs {
-      background: transparent; // remove default white background
-      border-bottom: 1px solid $color-mid-light;
-      position: relative; // for close button;
-
-      &::before {
-        display: none; // hide mobile arror thingy
-      }
-
-      .p-tabs__list {
-        padding: 0; // remove left padding
-      }
+    .p-tabs::before {
+      display: none; // hide mobile arror thingy
     }
 
     &__hide {
@@ -164,11 +154,6 @@
     .is-closed + & {
       opacity: 0;
     }
-  }
-
-  // because of Vanilla `* + *` top margin
-  .p-tooltip__message {
-    margin: 0;
   }
 
   // positioning fixes for track tooltip
